2015-12-09	Kevin Zheng
	* socket/info.c: Log messages that are broadcast to all players

2015-12-07	Daniel Hawkins
	* doc/scripts/gods-extract.pl: Refactor old gods-extract AWK scripts into a perl script.
	  While we're here, also reimplement protections, immunities, and vulnerabilities.
	* doc/playbook-html/Makefile.am: Point to the new gods-extract script.
	* doc/playbook-html/gods-extract: Removed.
	* doc/playbook/Makefile.am: Point to the new gods-extract script.
	* doc/playbook/gods-extract: Removed.

2015-11-25	Kevin Zheng
	* server/daemon.c: Remove server '-detach' flag

2015-11-21  Andreas Kirschbaum
	* common/artifact.c: Do not truncate face names.

2015-11-10  Daniel Hawkins
	* doc/scripts/levels-extract.pl: Created a new level extraction tool
	  for the documentation that works with modern server code and
	  is utilized for both html and latex outputs.
	* doc/playbook/Makefile.am: Point to the new perl script for level extraction.
	* doc/playbook/levels-extract: Removed. It was designed to find a hardcoded
	  exp table in living.c.
	* doc/playbook-html/Makefile.am: Point to the new perl script for level extraction.
	* doc/playbook-html/levels-extract: Removed. It was designed to find a hardcoded
	  exp table in living.c.

2015-05-31  Daniel Hawkins
	* common/living.c: Fixed a bug introduced in r19972 that made skill
	  experience based off total level instead of skill level.

2015-05-28  Daniel Hawkins
	* server/player.c: Tweak the starvation calculation to not use a loop.
	  Tweak the similar_direction calculation to use modulus instead of 
	  a switch statement.

2015-05-25  Daniel Hawkins
	* configure.ac: Made the configure script exit if lex and flex are not found.
	* utils/cfarches.xsl: Refactored can_use_xxx to be displayed in a single
	  cell. Also completed the set of can_use_xxx options.
	  Added XSL Transformation output for body slots.

2015-05-24  Daniel Hawkins
	* common/living.c: Fixed a bug in which the player's experience would